--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,5 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea
-.idea/*
+.idea/
 *.iml
-
-# Sensitive or high-churn files:
